gollum-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gollum-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gollum
  template:
    metadata:
      labels:
        app: gollum
    spec:
      containers:
      - name: gollum-container
        image: morganism/gollum-wiki:latest
        ports:
        - containerPort: 2027
