gollum-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gollum-service
spec:
  type: NodePort
  selector:
    app: gollum
  ports:
  - port: 80
    targetPort: 2027
    nodePort: 30000
